--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -145,6 +145,8 @@
     <string name="existing_user_onboarding_new_look_description">Su correo electrónico cifrado ha sido completamente rediseñado para facilitar su uso.</string>
     <string name="existing_user_onboarding_new_features_headline">Nuevas características</string>
     <string name="existing_user_onboarding_new_features_description">Disfrute de nuevas funciones como modo oscuro, notificaciones mejoradas, filtro de mensajes no leídos y subcarpetas.</string>
+    <string name="existing_user_onboarding_updated_proton_headline">Proton actualizado, protección unificada</string>
+    <string name="existing_user_onboarding_updated_proton_description">Introducing Proton’s refreshed look. Many services, one mission. Welcome to an Internet where privacy is the default. <a href="https://proton.me/news/updated-proton">Learn more</a></string>
     <string name="onboarding_next">Siguiente</string>
     <string name="onboarding_get_started">Comenzar</string>
     <string name="onboarding_image_view_content_description">Ilustración de Proton Mail</string>
