--- a/app/src/main/res/values-nl/strings.xml
+++ b/app/src/main/res/values-nl/strings.xml
@@ -145,6 +145,8 @@
     <string name="existing_user_onboarding_new_look_description">Uw versleutelde e-mail is helemaal opnieuw ontworpen voor optimaal gebruiksgemak.</string>
     <string name="existing_user_onboarding_new_features_headline">Nieuwe functionaliteiten</string>
     <string name="existing_user_onboarding_new_features_description">Profiteer van nieuwe functionaliteiten zoals donkere modus, verbeterde meldingen, een filter voor ongelezen berichten, en submappen.</string>
+    <string name="existing_user_onboarding_updated_proton_headline">Vernieuwde Proton, uniforme beveiliging</string>
+    <string name="existing_user_onboarding_updated_proton_description">Introducing Proton’s refreshed look. Many services, one mission. Welcome to an Internet where privacy is the default. <a href="https://proton.me/news/updated-proton">Learn more</a></string>
     <string name="onboarding_next">Volgende</string>
     <string name="onboarding_get_started">Aan de slag</string>
     <string name="onboarding_image_view_content_description">Proton Mail illustratie</string>
