--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -148,6 +148,7 @@
     <string name="existing_user_onboarding_updated_proton_description">Introducing Proton’s refreshed look. Many services, one mission. Welcome to an Internet where privacy is the default. <a href="https://proton.me/news/updated-proton">Learn more</a></string>
     <string name="onboarding_next">Weiter</string>
     <string name="onboarding_get_started">Los geht\'s</string>
+    <string name="onboarding_got_it">Verstanden</string>
     <string name="onboarding_image_view_content_description">Proton Mail Illustration</string>
     <!-- endregion -->
     <!-- region Snackbars -->
