--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -149,6 +149,7 @@
     <string name="existing_user_onboarding_updated_proton_description">Introducing Proton’s refreshed look. Many services, one mission. Welcome to an Internet where privacy is the default. <a href="https://proton.me/news/updated-proton">Learn more</a></string>
     <string name="onboarding_next">Successiva</string>
     <string name="onboarding_get_started">Per iniziare</string>
+    <string name="onboarding_got_it">Ho capito</string>
     <string name="onboarding_image_view_content_description">Illustrazione di Proton Mail</string>
     <!-- endregion -->
     <!-- region Snackbars -->
