--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -145,7 +145,7 @@
     <string name="existing_user_onboarding_new_look_description">Deine verschlüsselten E-Mails wurden im Hinblick auf Benutzerfreundlichkeit völlig neu gestaltet.</string>
     <string name="existing_user_onboarding_new_features_headline">Neue Funktionen</string>
     <string name="existing_user_onboarding_updated_proton_headline">Verbessertes Proton, einheitlicher Schutz</string>
-    <string name="existing_user_onboarding_updated_proton_description">Introducing Proton’s refreshed look. Many services, one mission. Welcome to an Internet where privacy is the default. <a href="https://proton.me/news/updated-proton">Learn more</a></string>
+    <string name="existing_user_onboarding_updated_proton_description">Proton präsentiert sein neues Design. Viele Dienste, eine Mission. Willkommen in einem Internet, in dem Datenschutz Standard ist. <a href="https://proton.me/news/updated-proton">Mehr erfahren</a></string>
     <string name="onboarding_next">Weiter</string>
     <string name="onboarding_get_started">Los geht\'s</string>
     <string name="onboarding_got_it">Verstanden</string>
