--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -146,7 +146,7 @@
     <string name="existing_user_onboarding_new_features_headline">Показать функции</string>
     <string name="existing_user_onboarding_new_features_description">Воспользуйтесь такими новыми функциями, как темный режим, улучшенные уведомления, фильтр непрочитанных сообщений и вложенные папки.</string>
     <string name="existing_user_onboarding_updated_proton_headline">Обновленный Proton и комплексная защита</string>
-    <string name="existing_user_onboarding_updated_proton_description">Introducing Proton’s refreshed look. Many services, one mission. Welcome to an Internet where privacy is the default. <a href="https://proton.me/news/updated-proton">Learn more</a></string>
+    <string name="existing_user_onboarding_updated_proton_description">Мы освежили внешний вид Proton. У наших сервисов общая миссия — создать Интернет, где конфиденциальность будет на первом месте. <a href="https://proton.me/news/updated-proton">Подробнее</a></string>
     <string name="onboarding_next">Далее</string>
     <string name="onboarding_get_started">Приступить к работе</string>
     <string name="onboarding_got_it">ОК</string>
